# opencv_edge_detection

./: README.md  pubspec.yaml
android/: CMakeLists.txt  build.gradle  settings.gradle
android/src/main/: AndroidManifest.xml
android/src/main/kotlin/com/example/opencv_edge_detection/: OpencvEdgeDetectionPlugin.kt
android/src/test/kotlin/com/example/opencv_edge_detection/: OpencvEdgeDetectionPluginTest.kt
example/: README.md  pubspec.yaml
example/android/app/: build.gradle.kts
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/main/kotlin/com/example/opencv_edge_detection_example/: MainActivity.kt
example/integration_test/: plugin_integration_test.dart
example/ios/: Podfile
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/ios/RunnerTests/: RunnerTests.swift
example/lib/: camera_processing_screen.dart  choose_options_screen.dart  image_processor.dart  main.dart  result_screen.dart  scan_image_page.dart  util.dart
example/lib/presentation/: camera_processing_screen.dart  choose_options_screen.dart  image_picker_screen.dart  result_screen.dart  scan_image_page.dart
example/lib/utils/: image_processor.dart
example/test/: widget_test.dart
ios/: opencv_edge_detection.podspec
ios/Classes/: OpencvEdgeDetectionPlugin.swift  opencv_edge_detection.cpp
lib/: opencv_edge_detection.dart  opencv_edge_detection_method_channel.dart  opencv_edge_detection_platform_interface.dart
test/: opencv_edge_detection_method_channel_test.dart  opencv_edge_detection_test.dart
